ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-04-14 Thomas Häber
	- GUI:
		* added and improved highlighting expressions for admin log

2009-04-12 Thomas Häber
	- GUI:
		* added GUI settings to enable/disable login from external source/website seperated for admin/reseller/client
		* added missing translation string for "Count default E-Mail addresses"

2009-04-11 Thomas Häber
	- GUI:
		* Fixed #1788: captcha fontfile not found (with new implemented font loading and LGPL fonts)
		* added field revision(-date) for translations in admin panel for administrator
		* added possibility to translate language names (+ german translations)
		* added missing translation string "Language was removed!"

2009-04-09 Thomas Häber
	- GUI:
		* Fixed #1783: js-errors
		* code cleanup (coding style, whitespaces ...)
		* reverted r1557 (which was a part revert of r1550) with modifications
		* a lot of HTML updates for more valid (X)HTML
		* fixed wrong HTML size of some icons
		* hardened input-checks.php::clean_html()
		* removed svn property "debian" from root folder

2009-04-03 Benedikt Heintel
	- GUI:
		* Fixed #918: Mail Management UI improvement

2009-03-29 Thomas Häber
	- LANGUAGES:
		* removed unused JavaScript function checkForm()
		* typo: can not -> cannot

2009-03-28 Thomas Häber
	- THEMES:
		* some refactoring of the JavaScript code (better documentation, replace use of eval, delete unused code/functions, merge use of functions, optimized loops ...)
	- GUI:
		* translated german php variables to english
		* optimized loops in GUI PHP code (especially the for loops)

2009-03-26 Thomas Häber
	- GUI:
		* Fixed #1745: Trim hostingplan description on overview page
	- ENGINE:
		* Fixed #1774: Missing secure Ports in ispcp-vrl-traff
		* Fixed #1770: Wrong Port in ispcp-srv-traff

2009-03-25 Thomas Häber
	- GUI:
		* Fixed #1667: It should be possible to (de)activate the log-comment on logon/password ispcp gui footer.