@@ -4,6 +4,7 @@ ispCP ω 1.0.1 Changelog
 2009-04-14 Thomas Häber
 	- GUI:
 		* added and improved highlighting expressions for admin log
+		* Fixed bug in client/hosting_plan_update.php (introduced with r1555)
 
 2009-04-12 Thomas Häber
 	- GUI:
